--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,15 +1,61 @@
+astroid==3.2.4
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+cryptography==43.0.0
+dill==0.3.8
+docx==0.2.4
 environs==9.5.0
+filelock==3.15.4
+fsspec==2024.6.1
 grpcio==1.63.0
+huggingface-hub==0.24.5
+idna==3.7
+isort==5.13.2
+Jinja2==3.1.4
+joblib==1.4.2
+lxml==5.3.0
+MarkupSafe==2.1.5
 marshmallow==3.21.3
-numpy==2.0.1
+mccabe==0.7.0
+mpmath==1.3.0
+networkx==3.3
+numpy==1.26.4
 packaging==24.1
 pandas==2.2.2
+pdfminer==20191125
+pdfminer.six==20240706
+pillow==10.4.0
+platformdirs==4.2.2
 protobuf==5.27.3
+pycparser==2.22
+pycryptodome==3.20.0
+pylint==3.2.6
 pymilvus==2.4.5
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
+python-pptx==1.0.2
 pytz==2024.1
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+safetensors==0.4.4
+scikit-learn==1.5.1
+scipy==1.14.0
+sentence-transformers==3.0.1
 setuptools==72.2.0
 six==1.16.0
+sympy==1.13.2
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+tomlkit==0.13.2
+torch==2.4.0
+tqdm==4.66.5
+transformers==4.44.0
+typing_extensions==4.12.2
 tzdata==2024.1
 ujson==5.10.0
+urllib3==2.2.2
+XlsxWriter==3.2.0
